--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: desafio-jackexperts
 description: Um mapeamento Helm para facilitar o deployment da minha solução para o desagio da Jack
 
-version 0.1.0
+version: 0.1.0
 appVersion: "1.0"
