--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,6 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
-metada:
+metadata:
   name: {{ .Release.Name }}-deployment
   labels:
     desafio: jackexperts
@@ -8,23 +8,22 @@ spec:
   replicas: {{ .Values.replicasCount }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
-    template:
-      metadata:
-        labels:
-          app: {{ .Release.Name }}
-          desafio: jackexperts
-        spec:
-          containers:
-            - name: nginx
-              image: "{{ .Value.image.repository }}:{{ .Values.image.tag }}"
-              ports:
-              - containerPort: 80
-              volumeMounts:
-              - name: html-volume
-                mountPath: /usr/share/nginx/html
-          volumes:
+      app: {{ .Release.Name }} 
+  template:
+    metadata:
+      labels:
+        app: {{ .Release.Name }}
+        desafio: jackexperts
+    spec:
+      containers:
+        - name: nginx
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          ports:
+            - containerPort: 8080
+          volumeMounts:
             - name: html-volume
-              configMap:
-                name: {{ .Release.Name }}-configmap
-                
+              mountPath: /usr/share/nginx/html
+      volumes:
+        - name: html-volume
+          configMap:
+            name: {{ .Release.Name }}-configmap
