--- a/nginx_files/Dockerfile
+++ b/nginx_files/Dockerfile
@@ -2,9 +2,9 @@ FROM nginx:alpine
 
 RUN adduser -D -g 'www' desafio-jack
 
-COPY ./README.md /usr/share/nginx/html
+COPY ./TIMELINE.md /usr/share/nginx/html
 
-COPY custom_nginx.conf /etc/nginx/nginx.conf
+COPY ./custom_nginx.conf /etc/nginx/nginx.conf
 
 RUN mkdir -p /var/cache/nginx /var/run /var/log/nginx /var/temp/nginx && \
     chown -R desafio-jack /var/cache/nginx /var/run /var/log/nginx /var/temp/nginx
