--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,7 +27,7 @@ jobs:
         run: docker buildx build -t $IMAGE ./nginx_files/
 
       - name: Save Docker image to file
-        run: docker save --output desafio-jackexperts.tar $IMAGE
+        run: docker save --output desafio-jackexperts.tar ./nginx_files/$IMAGE
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
