--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -28,9 +28,10 @@ jobs:
 
  #     - name: Save Docker image to file
  #       run: docker save --output desafio-jackexperts.tar --load $IMAGE
-      - name: List files
-        run: ls -lha
-        
+
+      - name: Update permissions
+        run: chmod 666 desafio-jackexperts.tar
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
