--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: desafio-jackexperts.tar
+          name: desafio-jackexperts
           path: desafio-jackexperts.tar
 
   test:
