--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -35,8 +35,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: desafio-jackexperts
-          path: desafio-jackexperts.tar
+          name: desafio-jackexperts.tar
+          path: ./desafio-jackexperts.tar
 
   test:
     name: Run Trivy Security scan
