--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,10 +24,10 @@ jobs:
         uses: docker/setup-buildx-action@v1  
 
       - name: Build Docker image
-        run: docker buildx build -t $IMAGE . --output desafio-jackexperts.tar
+        run: docker buildx build -t $IMAGE .
 
- #     - name: Save Docker image to file
- #       run: docker save --output desafio-jackexperts.tar --load $IMAGE
+      - name: Save Docker image to file
+        run: docker save --output desafio-jackexperts.tar --load $IMAGE
 
       - name: Update permissions
         run: chmod 666 desafio-jackexperts.tar
