--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,10 +24,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker buildx build -t $IMAGE .
-
-      - name: Save Docker image to file
-        run: docker save --output desafio-jackexperts.tar $IMAGE
+        run: docker buildx build -t $IMAGE . --output desafio-jackexperts.tar
 
       - name: Update permissions
         run: chmod 666 desafio-jackexperts.tar
