--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,7 +30,7 @@ jobs:
         run: chmod 666 desafio-jackexperts.tar
 
       - name: Verify permissions
-        run: ls -l desafio-jackexperts.tar
+        run: pwd && ls -l desafio-jackexperts.tar
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
