--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and export
         uses: docker/build-push-action@v6
         with:
-          tags: $IMAGE
+          tags: ${{ github.sha }}
           outputs: type=docker, dest=/tmp/desafio-jackexperts.tar
 
 #      - name: Update permissions
