--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,17 +23,11 @@ jobs:
       - name: Set up Docker buildx
         uses: docker/setup-buildx-action@v3
 
- #     - name: Build Docker image
-#        run: docker buildx build -t $IMAGE . --output desafio-jackexperts.tar
-
       - name: Build and export
         uses: docker/build-push-action@v6
         with:
           tags: ${{ github.sha }}
           outputs: type=docker, dest=/tmp/desafio-jackexperts.tar
-
-#      - name: Update permissions
-#       run: chmod 666 desafio-jackexperts.tar
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -64,7 +58,9 @@ jobs:
           name: desafio-jackexperts.tar
         
       - name: Load Docker image
-        run: docker load -i desafio-jackexperts.tar
+        run: |
+          docker load --input /tmp/desafio-jackexperts.tar
+          docker image ls -a
 
       - name: Install Trivy
         run: |
