--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -59,6 +59,7 @@ jobs:
         
       - name: Load Docker image
         run: |
+          docker image ls -a /tmp/
           docker load --input /tmp/desafio-jackexperts.tar
           docker image ls -a
 
