--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -56,6 +56,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: desafio-jackexperts.tar
+          path: /tmp
         
       - name: Load Docker image
         run: |
