--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and export
         uses: docker/build-push-action@v6
         with:
-          tags: ${{ github.sha }}
+          tags: $IMAGE
           outputs: type=docker, dest=/tmp/desafio-jackexperts.tar
 
       - name: Upload artifact
