--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and export
         uses: docker/build-push-action@v6
         with:
-          tags: $IMAGE
+          tags: asolheiro/desafio-jackexperts:${{ github.sha }}
           outputs: type=docker, dest=/tmp/desafio-jackexperts.tar
 
       - name: Upload artifact
@@ -78,7 +78,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: $IMAGE
+          image-ref: asolheiro/desafio-jackexperts:${{ github.sha }}
           format: 'sarif'
           output: 'trivy-results.sarif'
       
