--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -83,7 +83,7 @@ jobs:
           output: 'trivy-results.sarif'
       
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
 
@@ -108,6 +108,12 @@ jobs:
         run: docker load -i desafio-jackexperts.tar
 
       - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secretes.DOCKERHUB_TOKEN }}
+        
+      - name: Push to DockerHub
         run: docker push $IMAGE
 
   update:
