--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -129,8 +129,7 @@ jobs:
       - name: Update Helm values
         run: |
           cd desafio-jackexperts/helm
-          ls -lha
-          yq e -i ".image.tag = \"${{ github.sha }}\"" .values.yaml
+          yq e -i ".image.tag = \"${{ github.sha }}\"" ./values.yaml
           git config user.email "avgsolheiro@gmail.com"
           git config user.name ${{ secrets.user_github }}
           git add .
