--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -153,5 +153,6 @@ jobs:
       - name: Handle chart
         run: |
           git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
+          ls -lha
           cd /rmndvngrpslhr/desafio-jackexperts/helm
           helm upgrade -i desafio-jackexperts -f values.yaml -n nginx-desafio .
