--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -44,10 +44,7 @@ jobs:
         image: docker:27.3.1-dind
         options: --privileged
     env:
-      #DOCKER_DRIVER: overlay2
-      #DOCKER_HOST: tcp://docker:2375/
-      #DOCKER_TLS_CERTDIR: ""
-      IMAGE: asolheiro/desafio-jackexperts:$TAG
+      IMAGE: asolheiro/desafio-jackexperts:${{ github.sha }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -63,21 +60,10 @@ jobs:
           docker load --input /tmp/desafio-jackexperts.tar
           docker image ls -a
 
-      # - name: Install Trivy
-      #   run: |
-      #     TRIVY_VERSION=$(wget -qO - "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-      #     wget --no-verbose https://github.com/aquasecurity/trivy/releases/download/v${TRIVY_VERSION}/trivy_${TRIVY_VERSION}_Linux-64bit.tar.gz -O - | tar -zxvf -
-
-#     - name: Run Trivy scan
-#        run: ./trivy image --exit-code 0 --no-progress --format sarif -o report.sarif $IMAGE
-
-#     - name: Fail on CRITICAL vulnerabilities
-#        run: ./trivy image --exit-code 1 --severity CRITICAL --no-progress $IMAGE
-
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: asolheiro/desafio-jackexperts:${{ github.sha }}
+          image-ref: ${{ env.IMAGE }}
           format: 'sarif'
           output: 'trivy-results.sarif'
       
