--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -138,10 +138,20 @@ jobs:
 
       - name: Set up Kubeconfig
         run: |
+          mkdir -P ~/.minikube
+          Echo "$MINIKUBE_CLIENT_CRT" | base64 --decode > ~/.minikube/client.crt
+          echo "$MINIKUBE_CLIENT_KEY" | base64 --decode > ~/.minikube/client.key
+          echo "$MINIKUBE_CA_CRT" | base64 --decode > ~/.minikube/ca.crt
+
           mkdir -p ~/.kube
           echo "$KUBECONFIG_BASE64" | base64 --decode > ~/.kube/config
+
+          sed -i 's|/home/ubuntu/.minikube|/home/runner/.minikube|g' ~/.kube/config
         env:
           KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
+          MINIKUBE_CLIENT_CRT: ${{ secrets.MINIKUBE_CLIENT_CRT }}
+          MINIKUBE_CLIENT_KEY: ${{ secrets.MINIKUBE_CLIENT_KEY }}
+          MINIKUBE_CA_CRT: ${{ secrets.MINIKUBE_CA_CRT }}
 
       - name: Verify kubectl access
         run: kubectl get nodes
