--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -139,6 +139,7 @@ jobs:
       - name: Set up Kubeconfig
         run: |
           mkdir -p ~/.minikube
+          pwd ~/.minikube
           Echo "$MINIKUBE_CLIENT_CRT" | base64 --decode > ~/.minikube/client.crt
           echo "$MINIKUBE_CLIENT_KEY" | base64 --decode > ~/.minikube/client.key
           echo "$MINIKUBE_CA_CRT" | base64 --decode > ~/.minikube/ca.crt
