--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -142,10 +142,9 @@ jobs:
           mkdir -p ~/.minikube/profiles
           mkdir -p ~/.minikube/profiles/minikube
           
-          pwd ~/.minikube
           Echo "$MINIKUBE_CLIENT_CRT" | base64 --decode > ~/.minikube/profiles/minikube/client.crt
           echo "$MINIKUBE_CLIENT_KEY" | base64 --decode > ~/.minikube/profiles/minikube/client.key
-          echo "$MINIKUBE_CA_CRT" | base64 --decode > ~/.minikube/profiles/minikube/ca.crt
+          echo "$MINIKUBE_CA_CRT" | base64 --decode > ~/.minikube/ca.crt
 
           mkdir -p ~/.kube
           echo "$KUBECONFIG_BASE64" | base64 --decode > ~/.kube/config
