--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -149,6 +149,6 @@ jobs:
       - name: Handle chart
         run: |
           git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
-          ls -lha
+          ls -lha ./
           cd ./helm
           helm upgrade -i desafio-jackexperts -f values.yaml -n nginx-desafio .
