--- a/custom_nginx.conf
+++ b/custom_nginx.conf
@@ -1,4 +1,4 @@
-user nginxuser;
+user desafio-jackexperts;
 worker_processes 1;
 
 events {
@@ -18,7 +18,7 @@ http {
 
         location / {
             root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            index  index.html index.html;
         }
 
         # Desabilitar cache temporário (caso precise)
