--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,5 +6,6 @@ service:
   type: ClusterIP
   port: 8080
 domain:
+namespace: desafio-nginx
 customHtml: |-
   {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
