--- a/helm/templates/namespace.yaml
+++ b/helm/templates/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 matadata:
-  name: {{ Values.namespace }}
+  name: {{ .Values.namespace }}
   labels:
     desafio: jackexperts
