--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -175,6 +175,6 @@ jobs:
       - name: Handle chart
         run: |
           git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
-          ls -lha ./
           cd ./helm
-          helm upgrade -i desafio-jackexperts --namespace desafio-nginx --create-namespace -f values.yaml  .
+          ls -lha ./
+          helm upgrade -i desafio-jackexperts --namespace desafio-nginx --create-namespace -f values.yaml --debug
