--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -177,4 +177,4 @@ jobs:
           git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
           cd ./helm
           ls -lha ./
-          helm upgrade -i desafio-jackexperts --namespace desafio-nginx --create-namespace -f values.yaml . --debug
+          helm upgrade -i desafio-jackexperts --namespace desafio-nginx --create-namespace desafio-nginx -f values.yaml . --debug
