--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -171,5 +171,5 @@ jobs:
           git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
           cd ./helm
           ls -lha ./
-          helm upgrade -i desafio-jackexperts . --namespace desafio-nginx --create-namespace -f values.yaml --debug
+          helm template desafio-jackexperts . -f values.yaml --debug
 
