--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-ingress
+  namespace: {{ .Values.namespace }}
   labels:
     desafio: jackexperts
 spec:
