fixing index html reference

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -15,4 +15,4 @@ namespace: desafio-nginx
 customHtml: |-
   {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
 timelineMD: |-
-  {{ include "desafio-jackexperts.TIMELINE.mds.tpl" . }}
+  {{ include "desafio-jackexperts.TIMELINE.mds.tpl" . | indent 4}}
