fixing index html reference

--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -7,4 +7,9 @@ metadata:
     desafio: jackexperts
 data:
   index.html: {{ .Values.customHtml }}
-  TIMELINE.md: {{ .Values.timelineMD }}
+  TIMELINE.md: 
+  {{- range $path := .Values.timelineMD }}
+    {{ base (path.Base.$path) }}: |
+    {{- $file := .Files.Get $path | nindent 4 }}
+    {{ $file }}
+  {{- end }}
