--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -14,5 +14,5 @@ ingress:
 namespace: desafio-nginx
 customHtml: |-
   {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
-timelineMD: |-
-  {{ include "desafio-jackexperts.TIMELINE.mds.tpl" . | indent 4}}
+timelineMD: 
+  - ./TIMELINE.md
