--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -12,7 +12,12 @@ traefik:
 ingress:
   domain: "armandosolheiro.xyz"
 namespace: desafio-nginx
-customHtml: |-
-  {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
-timelineMD:
-  - ./TIMELINE.md
+nginx: 
+  htmlDir:
+  htmlFiles:
+    - index.html
+    - TIMELINE.md
+# customHtml: |-
+#   {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
+# timelineMD:
+#   - ./TIMELINE.md
