--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -7,13 +7,10 @@ metadata:
     desafio: jackexperts
     app: nginx
 data:
-  {{ range $file := .Values.nginx.htmlFiles }}
-  {{ $file }}: {{ template "readFile" . }}
-  {{ end }}
-  # index.html: {{ .Values.customHtml }}
-  # TIMELINE.md: 
-  # {{- range $path := .Values.timelineMD }}
-  #   {{ base (path.Base.$path) }}: |
-  #   {{- $file := .Files.Get $path | nindent 4 }}
-  #   {{ $file }}
-  # {{- end }}
+  index.html: {{ .Values.customHtml }}
+  TIMELINE.md: |-
+    {{- range $path := .Values.timelineMD }}
+      {{ base (path.Base.$path) }}: |
+      {{- $file := .Files.Get $path | nindent 4 }}
+      {{ $file }}
+    {{- end }}
