fixing index html reference

--- a/custom_nginx.conf
+++ b/custom_nginx.conf
@@ -18,7 +18,7 @@ http {
 
         location / {
             root   /usr/share/nginx/html;
-            index  index.html index.html;
+            index  index.html index.htm;
         }
 
         # Desabilitar cache temporário (caso precise)
