--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           securityContext:
             runAsUser: {{ .Values.securityContext.runAsUser }}
             runAsGroup: {{ .Values.securityContext.runAsGroup }}
-            allowPrivilegeEscalation: {{ .Values.securitContext.allowPrivilegeEscalation }}
+            allowPrivilegeEscalation: {{ .Values.securityContext.allowPrivilegeEscalation }}
           volumeMounts:
             - name: html-volume
               mountPath: /usr/share/nginx/html
