fixing index html reference

--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -7,4 +7,4 @@ metadata:
     desafio: jackexperts
     app: nginx
 data:
-  index.html: {{ .Values.customHtml }}
+  index.html: {{ .Values.nginx.customHtml }}
