--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -9,3 +9,5 @@ metadata:
 data:
   index.html: |
     {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
+  timeline.md: |
+    {{ include "desafio-jackexperts.timeline.md.tpls" . | indent 2 }}
