--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -9,5 +9,4 @@ metadata:
 data:
   index.html: |
     {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
-  timeline.md: |
-    {{ include "desafio-jackexperts.timeline.md.tpl" . | indent 4 }}
+  timeline.md: {{ .Values.nginx.timeline.md }}
