--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -67,14 +67,27 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
       
-
-      - name: Trivy Scanning
-        uses: aquasecurity/trivy-action@master
+      - name: Run Trivy scanner
+        uses: aquasecurity/trivy-action@0.20.0
         with:
-            image-ref: ${{ env.IMAGE }}
-            format: "table"
-            output: "trivy-results.txt"
+          scan-type: config
+          hide-progress: true
+          output: trivy.txt
 
+      - name: Publish Trivy Output to Summary
+        run: |
+          if [[ -s trivy.txt ]]; then
+            {
+              echo "### Security Output"
+              echo "<details><summary>Click to expand</summary>"
+              echo ""
+              echo 'terraform'
+              cat trivy.txt
+              echo ''
+              echo "</details>"
+            } >> $GITHUB_STEP_SUMMARY
+          fi
+         
       - name: Upload report Trivy
         uses: actions/upload-artifact@v4
         with:
