--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -177,7 +177,7 @@ jobs:
           KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
           
       - name: Verify kubectl access
-        run:  kubectl get nodes
+        run:  kubectl get nodes -A
 
       - name: Handle chart
         run: |
