--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -10,5 +10,6 @@ data:
   index.html: |
     {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
   timeline.html: |
-    {{ include "desafio-jackexperts.timeline.html.tpl" . | indent 4}}
+  {{ .Files.Get "timeline,md" | indent 4}}
+#{{ include "desafio-jackexperts.timeline.html.tpl" . | indent 4}}
   
