fixing index html reference

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,7 +1,7 @@
 namespace: desafio-nginx # namespace da aplicação
 replicasCount: 1 # número de replicas
 image:
-  repository: asolheiro/desafio-jackexperts # repo no registry
+  repository: asolheiro/desafio-jackexperts 
   tag: "fa4d06ff031965675f458e4de5ec68a77422e70c"
 service:
   type: ClusterIP # tipo do service criado
