--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -10,6 +10,8 @@ data:
   index.html: |
     {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
   timeline.md: |
-    {{ .Files.Get "timeline.md" | indent 4}}
+    {{ .Files.Get "./timeline.md" | indent 4 }}
+  index2.html: |
+    {{ .Files.Get "index.html" | indent 4  }}
 
   
