--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -9,5 +9,9 @@ metadata:
 data:
   index.html: |
     {{ include "desafio-jackexperts.index.html.tpl" . | indent 4 }}
-  index2.html: {{ .Values.nginx.indexHtml }}
-  timeline.md: {{ .Values.nginx.timelineMd }}
+  index2.html: |
+    {{ range .Files.Lines "../index.html"  }}
+    {{ . }}{{ end }}
+  timeline.md: |
+    {{ range .Files.Lines "../timeline.md"  }}
+    {{ . }}{{ end }}
