--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -186,3 +186,39 @@ jobs:
           ls -lha ./
           helm upgrade -i desafio-jackexperts . -f values.yaml --debug
 
+  certs:
+    name: Creating certificates
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Install Helm
+        run: |
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
+
+      - name: Set up Kubeconfig
+        run: |
+          mkdir -p ~/.kube
+          echo "$KUBECONFIG_BASE64" | base64 --decode > ~/.kube/config
+        env:
+          KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
+
+      - name: Install cert-manager with Helm
+        run: |
+          helm repo add jetstack https://charts.jetstack.io
+          helm repo update
+          kubectl create namespace cert-manager
+
+          helm install cert-manager jetstack/cert-manager \
+            --namespace cert-manager \
+            --version v1.12.0 \
+            --set installCRDs=true
+
+      - name: Verify certs install
+        run:  kubectl get pods --namespace cert-manager
+
+
