--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -155,37 +155,6 @@ jobs:
           git commit -m "Update image tag to ${{ github.sha }}"
           git push https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/asolheiro/desafio-jackexperts.git
 
-  deploy:
-    name: Deploy to Kubernetes
-    runs-on: ubuntu-latest
-    needs: update
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install helm
-        run: |
-          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-          chmod 700 get_helm.sh
-          ./get_helm.sh
-
-      - name: Set up Kubeconfig
-        run: |
-          mkdir -p ~/.kube
-          echo "$KUBECONFIG_BASE64" | base64 --decode > ~/.kube/config
-        env:
-          KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
-          
-      - name: Verify kubectl access
-        run:  kubectl get nodes -A
-
-      - name: Handle chart
-        run: |
-          git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
-          cd ./helm
-          ls -lha ./
-          helm upgrade -i desafio-jackexperts . -f values.yaml --debug
-
   certs:
     name: Creating certificates
     runs-on: ubuntu-latest
@@ -220,5 +189,42 @@ jobs:
 
       - name: Verify certs install
         run:  kubectl get pods --namespace cert-manager
+
+  deploy:
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: update
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install helm
+        run: |
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
+
+      - name: Set up Kubeconfig
+        run: |
+          mkdir -p ~/.kube
+          echo "$KUBECONFIG_BASE64" | base64 --decode > ~/.kube/config
+        env:
+          KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
+          
+      - name: Verify kubectl access
+        run:  kubectl get nodes -A
+
+      - name: Handle chart
+        run: |
+          git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
+          cd ./helm
+          ls -lha ./
+          helm upgrade -i desafio-jackexperts . -f values.yaml --debug
+
+      - name: Verify ClusterIssuer
+        run: kubectl get clusterissuer -A
+
+
+  
 
 
