--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -180,9 +180,8 @@ jobs:
         run: |
           helm repo add jetstack https://charts.jetstack.io
           helm repo update
-          kubectl create namespace cert-manager
-
-          helm install cert-manager jetstack/cert-manager \
+          
+          helm upgrade -i cert-manager jetstack/cert-manager \
             --namespace cert-manager \
             --version v1.12.0 \
             --set installCRDs=true
@@ -223,6 +222,10 @@ jobs:
 
       - name: Verify ClusterIssuer
         run: kubectl get clusterissuer -A
+
+      - name: Verify Certificate status
+        run: kubectl describe certificate seu-dominio-cert
+
 
 
   
