--- a/helm/templates/certificate.yaml
+++ b/helm/templates/certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: domain-cert
-  namespace: default
+  namespace: {{ .Values.namespace }}
   labels:
     desafio: jackexperts
 spec:
@@ -10,6 +10,6 @@ spec:
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
-  commonName: armandosolheiro.xyz
+  commonName: {{ .Values.ingress.domain }}
   dnsNames:
-  - armandosolheiro.xyz
+  - {{ .Values.ingress.domain }}
