--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -192,7 +192,7 @@ jobs:
   deploy:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
-    needs: update
+    needs: certs
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
