--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -155,40 +155,6 @@ jobs:
           git commit -m "Update image tag to ${{ github.sha }}"
           git push https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/asolheiro/desafio-jackexperts.git
 
-  certs:
-    name: Creating certificates
-    runs-on: ubuntu-latest
-    needs: update
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Install Helm
-        run: |
-          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-          chmod 700 get_helm.sh
-          ./get_helm.sh
-
-      - name: Set up Kubeconfig
-        run: |
-          mkdir -p ~/.kube
-          echo "$KUBECONFIG_BASE64" | base64 --decode > ~/.kube/config
-        env:
-          KUBECONFIG_BASE64: ${{ secrets.KUBECONFIG_BASE64 }}
-
-      - name: Install cert-manager with Helm
-        run: |
-          helm repo add jetstack https://charts.jetstack.io
-          helm repo update
-          
-          helm upgrade -i cert-manager jetstack/cert-manager \
-            --namespace cert-manager \
-            --version v1.12.0 \
-            --set installCRDs=true
-
-      - name: Verify certs install
-        run:  kubectl get pods --namespace cert-manager
-
   deploy:
     name: Deploy to Kubernetes
     runs-on: ubuntu-latest
@@ -220,14 +186,8 @@ jobs:
           ls -lha ./
           helm upgrade -i desafio-jackexperts . -f values.yaml --debug
 
-      - name: Verify ClusterIssuer
-        run: kubectl get clusterissuer -A
-
-      - name: Verify Certificate status
-        run: kubectl describe certificate domain-cert -n desafio-nginx
-
-      - name: Verify Ingress
-        run: kubectl describe ingress desafio-jackexperts-ingress -n desafio-nginx
+      - name: Verify upgrades
+        run: kubectl get all -A
 
       
       
