--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -184,7 +184,8 @@ jobs:
           git clone https://${{ secrets.user_github }}:${{ secrets.GITHUB_TOKEN }}@github.com/rmndvngrpslhr/desafio-jackexperts.git
           cd ./helm
           ls -lha ./
-          helm upgrade -i desafio-jackexperts . -f values.yaml --debug
+          helm upgrade -i desafio-jackexperts . -f values.yaml
+          helm uninstall desafio-jackexperts -f values.yaml
 
       - name: Verify upgrades
         run: kubectl get all -A
