--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -185,7 +185,7 @@ jobs:
           cd ./helm
           ls -lha ./
           helm upgrade -i desafio-jackexperts . -f values.yaml
-          helm uninstall desafio-jackexperts -f values.yaml
+          helm uninstall desafio-jackexperts
 
       - name: Verify upgrades
         run: kubectl get all -A
