--- a/helm/templates/traefik-service.yaml
+++ b/helm/templates/traefik-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik
-  namespace: desafio-nginx
+  namespace: {{ .Values.namespace }}
   labels:
     desafio: jackexperts
 spec:
